--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="file">
-<h2>Quote N Vote</h2>
-<app-display></app-display>
+<div class= "container-fluid" id="file">
+  <div class="row min-vh-100  text-center justify-content-center align-items-center flex-column">
+    <h2>Quote N Vote</h2>
+    <app-display></app-display>
+  </div>
 </div>
