--- a/src/app/display/display.component.css
+++ b/src/app/display/display.component.css
@@ -1,3 +1,12 @@
 .row {
   color: white;
 }
+#icon {
+  background-color: white;
+  opacity: 0.9;
+}
+#share {
+  color: black;
+  background-color: white;
+  opacity: 0.8;
+}
