--- a/src/app/entry/entry.component.css
+++ b/src/app/entry/entry.component.css
@@ -1,4 +1,6 @@
-.entry {
+.entryform {
   background-color: transparent;
   color: white;
+  background-image: url("https://i.pinimg.com/originals/48/8f/45/488f4521a7ba89102cc3c635343d4db8.jpg");
+  opacity:0.7;
 }
